# firmware

./: .gitignore  Makefile  README.md  makefile  protocol.md
.reuse/: dep5
cs/: .gitignore  CMakeLists.txt  board.c  board.h  board_pico.c  board_pico_w.c  cmd.h  common.c  common.h  cs.c  dcc.h  exe.c  exe.h  lwipopts.h  prot.c  prot.h  rbuf.c
cs/pico/: .gitignore  channel.h  cmd.h  cs.c  dcc.c  rbuf.h
firmware/: .gitignore  CMakeLists.txt  README.md  channel.c  channel.h  cmd.c  cmd.h  common.h  dcc.c  dcc.h  exe.c  io.c  io.h
fritzing/: cs_01.fzz
pico/: CMakeLists.txt  board.c  cmd.c  cmd.h  cs.c  dcc_tx.pio  io.c  io.h
src/: CMakeLists.txt  board.c  board.h  board_pico.c  board_pico_w.c  cfg.c  cfg.h  channel.c  channel.h  cmd.c  cmd.h  cmdq.c  cmdq.h  common.c  common.h  core.c  core.h  cs.c  dcc.c  dcc.h  dcc_tx.c  dcc_tx.h  dcc_tx.pio  exe.c  flash.c  flash.h  io.c  io.h  loop.h  loop_pico.c  loop_pico_w.c  mt.c  mt.h  prot.c  prot.h  rbuf.c  rbuf.h  tcp_server.c  tcp_server.h
